Timer angepasst IR Empfänger implimentiert

--- a/KletterHandlingRoboter/KletterHandlingRoboter.vcxproj.filters
+++ b/KletterHandlingRoboter/KletterHandlingRoboter.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="TrackSensor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\Users\matthias.stieger.COMPUTECHNIC\Desktop\iecTimer\iecTimer.h">
+    <ClInclude Include="Timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <ClCompile Include="TrackSensor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Users\matthias.stieger.COMPUTECHNIC\Desktop\iecTimer\iecTimer.cpp">
+    <ClCompile Include="Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
